--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "ES2015/ES6",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
